test/fail/integration/_fail_sem_expr_index_2.hs
x :: Int
x = [1] !! 'c'
main = print "hello"